--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="chart-conatiner">
       <div id="chart"></div>
     </div>
+
+    <span><b>Note:</b>Data for some countries is not available</span>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="main.js"></script>
   </body>
